# Talos

./: README.md  outputParser.py  proofTree.py  talos.py
SPASS-3.7/: LICENCE  Makefile.am  Makefile.in  README  aclocal.m4  configure  configure.ac
SPASS-3.7/SPASS/: analyze.c  analyze.h  approx.c  approx.h  clause.c  clause.h  clock.c  clock.h  closure.c  closure.h  cmdline.c  cmdline.h  cnf.c  cnf.h  component.c  component.h  condensing.c  condensing.h  config.h.in  context.c  context.h  defs.c  defs.h  description.c  description.h  dfg.h  dfg2ascii.c  dfg2dfg.c  dfg2otter.c  dfg2tptp.c  dfgparser.c  dfgparser.h  dfgparser.y  dfgscanner.c  dfgscanner.l  doc-proof.c  doc-proof.h  eml.c  eml.h  flags.c  (+88 more)
SPASS-3.7/doc/html/: script.html  script_1.html  script_2.html  script_3.html  script_4.html  script_5.html  script_6.html  script_7.html  script_abt.html  script_ovr.html
SPASS-3.7/doc/man/: SPASS.1  dfg2ascii.1  dfg2dfg.1  dfg2otter.1  dfg2otter.pl.1  dfg2tptp.1  tptp2dfg.1
SPASS-3.7/doc/texinfo/: SPASS.texi  dfg2ascii.texi  dfg2dfg.texi  dfg2otter.pl.texi  dfg2otter.texi  dfg2tptp.texi  script.info  script.texi  spassfaq.texi  tptp2dfg.texi
SPASS-3.7/m4/: ac_prog_perl_version.m4
SPASS-3.7/scripts/: dfg2otter.pl.in  texi2pod.pl.in
